# kaggle_mri_segmentation

./: .gitignore  .pylintrc  Dockerfile  README.md  app.py  pyproject.toml  setup.cfg  setup.py
.github/actions/codecov/: action.yml
.github/actions/lint/: action.yml
.github/workflows/: build.yml  codecov.yml  lint.yml  main.yml  python_CI.yml
.streamlit/: config.toml
actions/: codecov.yml
demo/: dataset.py  metrics.py  model.py  monitoring.py  patient.py  pipeline.py  study.py
demo/tests/: test_model.py
tests/: test_model.py
