[metadata]
name = your_package_name
version = 0.1.0
description = Your package description

[options]
packages = find:
install_requires =
    albumentations
    natsort
    numpy
    pandas
    opencv-python-headless
    plotly
    lightning
    scikit-learn
    streamlit
    torch
    torchmetrics
    torchvision

[options.extras_require]
setup =
    pytest
    pytest-cov
    pytest-sugar
    pylint
    
[options.packages.find]
exclude =
    tests*
    testing*